# Codex-Scribe

./: .gitignore  .pre-commit-config.yaml  404.html  PR_BODY.md  README.md  api-structure.md  common-mistakes.md  component-style-guide.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
architecture/api-design/: index.html
architecture/data-flow/: index.html
architecture/security-considerations/: index.html
architecture/system-overview/: index.html
development/git-workflow/: index.html
development/phase-1-mvp/: index.html
development/phase-2-automation/: index.html
development/phase-3-knowledge-graph/: index.html
docs/: index.md
docs/architecture/: api-design.md  data-flow.md  security-considerations.md  system-overview.md
docs/development/: git-workflow.md  phase-1-mvp.md  phase-2-automation.md  phase-3-knowledge-graph.md
docs/implementation/: deployment.md  monitoring.md  setup-guide.md  testing-strategy.md  usage_examples.md
docs/research/: literature-review.md  technology-comparison.md
docs/technical/: ai-model-specs.md  coding-standards.md  database-schema.md  performance-benchmarks.md
implementation/deployment/: index.html
implementation/monitoring/: index.html
implementation/setup-guide/: index.html
implementation/testing-strategy/: index.html
implementation/usage_examples/: index.html
research/literature-review/: index.html
research/technology-comparison/: index.html
scripts/: index_repository.py
search/: search_index.json
tests/: conftest.py
(+34 files in other folders)
