[project]
name = "codex-scribe"
version = "0.1.0"
description = "AI agent for GitHub project understanding and issue reporting."
authors = [
    {name = "hpliu", email = "milkhao0608@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "streamlit>=1.28.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "PyGithub>=1.59.0",
    "requests>=2.31.0",
    "tree-sitter>=0.20.0",
    "neo4j>=5.0.0"
]

[project.scripts]
codex-scribe = "src.presentation.cli.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
black = ">=23.0.0"
isort = ">=5.12.0"
mypy = ">=1.6.0"
pre-commit = ">=3.5.0"
ruff = ">=0.1.0"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "C4", "B"]
ignore = ["E501"]
